--- a/src/styles/CourseCard.css
+++ b/src/styles/CourseCard.css
@@ -1,6 +1,7 @@
 .mp-course-link {
     text-decoration: none;
     color: inherit;
+    width: 390px;
 }
 
 .mp-course-card {
@@ -69,7 +70,7 @@
     gap: 0.5rem;
     background-color: #f0f7ff;
     padding: 1rem;
-    border-radius: 12px;
+    border-radius: 5px 12px 12px 5px;
     border-left: 4px solid #2196f3;
 }
 
