--- a/src/styles/CourseTabs.css
+++ b/src/styles/CourseTabs.css
@@ -146,6 +146,7 @@
 
 .ci-button-generate-code {
     padding: 6px 10px;
+    color: white;
 }
 
 .ci-button-generate-code:disabled {
@@ -168,8 +169,46 @@
     animation: fadeIn 0.3s forwards;
 }
 
+.ci-delete-course-container {
+    margin-top: 40px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.ci-delete-course-button {
+    background-color: #dc3545;
+    color: rgb(255, 255, 255);
+    padding: 10px 18px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.2s ease;
+}
+
+.ci-delete-course-button:hover {
+    background-color: #c82333;
+}
+
+.no-students-message {
+    text-align: center;
+    font-style: italic;
+    color: gray;
+    margin-top: 1rem;
+}
+
 @keyframes fadeIn {
     to {
         opacity: 1;
+    }
+}
+
+@media (max-width: 875px) {
+    .ci-invate-code-container {
+        flex-direction: column;
+    }
+
+    .ci-button-generate-code {
+        margin-top: 15px;
     }
 }
