--- a/src/styles/WelcomePage.css
+++ b/src/styles/WelcomePage.css
@@ -29,7 +29,7 @@ body {
     padding: 0 3rem;
     background-color: #ddf1ff;
     align-items: center;
-    height: 100%;
+    height: calc(100vh - 71px);
     gap: 2rem;
     flex-wrap: wrap;
 }
@@ -100,7 +100,7 @@ body {
 
 .wp-image {
     width: 100%;
-    height: auto;
+    height: 500px;
     max-width: 900px;
     object-fit: contain;
 }
