--- a/src/styles/LessonPage.css
+++ b/src/styles/LessonPage.css
@@ -243,28 +243,6 @@
     border-radius: 10px;
 }
 
-/* На малих екранах ховаємо скролбар візуально */
-@media (max-width: 1024px) {
-    .lp-scroll-box {
-        -ms-overflow-style: none;
-        /* IE і Edge */
-        scrollbar-width: none;
-        /* Firefox */
-    }
-
-    .lp-scroll-box::-webkit-scrollbar {
-        display: none;
-        /* Chrome, Safari, Opera */
-    }
-}
-
-/* Додаткові стилі для мобільних пристроїв */
-@media (max-width: 600px) {
-    .lp-scroll-box {
-        padding: 0.5rem;
-    }
-}
-
 .lp-status-button {
     display: flex;
     width: 100%;
@@ -411,4 +389,79 @@
     color: #333;
     transform: translateY(-1px);
     /* text-decoration: underline; */
+}
+
+@media (max-width: 1024px) {
+    .lp-scroll-box {
+        -ms-overflow-style: none;
+        /* IE і Edge */
+        scrollbar-width: none;
+        /* Firefox */
+    }
+
+    .lp-scroll-box::-webkit-scrollbar {
+        display: none;
+        /* Chrome, Safari, Opera */
+    }
+}
+
+@media (max-width: 768px) {
+    .lp-scroll-box {
+        padding: 0.5rem;
+    }
+
+    .lp-title-container {
+        flex-direction: column;
+    }
+
+    .lp-lesson-card {
+        padding: 0 0.5rem;
+    }
+
+    .lp-lesson-title {
+        font-size: 1.4rem;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        word-break: break-word;
+        /* дозволяє ламати дуже довгі слова */
+        overflow-wrap: anywhere;
+    }
+
+    .lp-lesson-page {
+        padding: 0 0;
+    }
+
+    .lp-task-status {
+        margin-top: 5px;
+    }
+
+    .lp-task-box {
+        flex-direction: column;
+    }
+
+    .lp-status-button button {
+        width: 85%;
+    }
+
+    .lesson-edit-form {
+        padding: 24px 3px;
+    }
+
+    .lp-lesson-attachments h3 {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 350px) {
+    .lp-task-status {
+        flex-direction: column;
+    }
+
+    .lp-deadline {
+        margin: 5px;
+    }
 }
