--- a/src/styles/AdminPage.css
+++ b/src/styles/AdminPage.css
@@ -58,10 +58,10 @@
     }
 
     .admin-container {
-
-
         height: 100vh;
-
+        padding: 10px 0;
+        margin-top: 0;
+        height: auto;
     }
 
     .admin-tabs button {
@@ -70,5 +70,16 @@
 
     .admin-content {
         padding: 10px;
+    }
+
+    .users-admin-page {
+        margin-top: 0px;
+        padding: 10px 5px 20px 5px;
+        height: 75vh;
+    }
+
+    .admin-content {
+        margin-top: 5px;
+
     }
 }
