--- a/src/styles/navbar.component.css
+++ b/src/styles/navbar.component.css
@@ -44,6 +44,7 @@
 
 .link-logo {
     text-decoration: none;
+
 }
 
 .btn-nav {
@@ -91,6 +92,18 @@
 .dropdown-menu button:hover {
     background-color: #f0f0f0;
     border-radius: 5px;
+}
+
+.link-logo .nav-title {
+    font-size: 24px;
+    /* font-weight: bold; */
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.link-logo .nav-title:hover {
+    transform: scale(1.1);
+
 }
 
 @media (max-width: 768px) {
