--- a/src/styles/navbar.component.css
+++ b/src/styles/navbar.component.css
@@ -35,7 +35,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #444;
+    background-color: transparent;
 }
 
 .link-notification {
